Made local login manager storage path modifiable
Request:WPL-2797
Change-Id: Iebdc2e1c02e95b1511df92472db3bfe95f0bf045